monfot/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: budgetproperty
  labels:
    app.kubernetes.io/part-of: budgetproperty
